pro/Geopy/GpMessages/305167051595700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">开始时间: 2023年8月27日 19:32:29</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    m2_to_ft2((163463458.60942245)
                                 ^
SyntaxError: unexpected EOF while parsing
</msg><msg code="-2147467259" type="100">执行(CalculateField)失败。</msg><msg code="0" type="3">运行 失败，结束时间： 2023年8月27日 19:32:29 (历时: 0.04 秒)</msg></messages>